# slavic_wiktionary_parser

./: .gitignore  Cargo.toml  README.md
models/language_section/: mod.rs
models/wiki_macro/: mod.rs
models/wiki_macro/expand/: mod.rs
models/wiki_macro/extract_name/: mod.rs
models/wiki_macro/macro_of/: mod.rs
models/wiki_macro/macro_of/belarusian_adjective_macro/: mod.rs
models/wiki_macro/macro_of/belarusian_adverb_macro/: mod.rs
models/wiki_macro/new/: mod.rs
models/wiki_macro/to_db_row/: mod.rs
models/wiki_text_page/: mod.rs
models/wiki_text_page/api/: mod.rs
models/wiki_text_page/new/: mod.rs
src/: main.rs
src/constants/: mod.rs
src/funcs/: mod.rs
src/funcs/russian/: mod.rs
src/models/: mod.rs
src/models/language_section/: mod.rs
src/models/wiki_macro/: mod.rs
src/models/wiki_text_page/: mod.rs
src/processes/: mod.rs
src/processes/dump_to_filtered/: mod.rs
src/processes/entry_csv_to_lemma_csv/: mod.rs
src/processes/extract_meanings/: mod.rs
src/processes/filtered_to_json/: mod.rs
src/processes/json_to_entry_csv/: mod.rs
src/processes/json_to_entry_json/: mod.rs
src/processes/json_to_form_lemma/: mod.rs
src/processes/run_diagnostic_on_language_corpus/: mod.rs
src/traits/: mod.rs
src/traits/accented/: mod.rs
src/traits/macro_containing/: mod.rs  test.rs
src/traits/seekable/: mod.rs
src/traits/to_db_row/: mod.rs
src/utils/: find_ipa_for.rs  mod.rs
src/utils/extract_macro_name/: mod.rs  test.rs
src/utils/redact_comment_block/: mod.rs  test.rs
src/utils/select_from/: mod.rs
(+51 files in other folders)
